# tcc_backend

./: Cargo.toml  README.md
src/: config.rs  main.rs
src/data/: database.rs  historic.rs  product.rs  user.rs
src/models/: credentials.rs  login_response.rs  product.rs  product_cart.rs  product_cart_update.rs  tokens.rs  user.rs
src/routes/: auth.rs  history.rs  product.rs  user.rs
