[package]
name = "backend"
version = "0.1.0"
edition = "2021"
authors = ["Watyson <watysonsoares@hotmail.com>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-cors = "0.6.4"
actix-files = "0.6.2"
actix-web = "4.3.1"
deadpool-postgres = "0.10.5"
env_logger = "0.10.0"
http = "0.2.9"
lazy_static = "1.4.0"
lettre = "0.10.4"
lettre_email = "0.9.4"
rand = "0.8.5"
serde = { version = "1.0.158", features = ["derive"] }
serde_json = "1.0.94"
tokio = "1.26.0"
tokio-postgres = "0.7.8"


[package.metadata]
actix-web = { default-features = false, charset = "utf-8" }
